[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/StartScreen.png" type="Texture" id=1]
[ext_resource path="res://Menus/Main Menu.gd" type="Script" id=2]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 4096.0
margin_bottom = 1920.0
rect_scale = Vector2( 0.2, 0.303 )
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 80.0
margin_top = 80.0
margin_right = 528.0
margin_bottom = 496.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 448.0
margin_bottom = 416.0
custom_constants/separation = 5

[node name="play button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 448.0
margin_bottom = 20.0
text = "Single Player mode"

[node name="two player button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 448.0
margin_bottom = 45.0
text = "Two Player mode"

[node name="options button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 448.0
margin_bottom = 70.0
text = "Options menu"

[node name="credits button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 448.0
margin_bottom = 95.0
text = "Credits"

[connection signal="pressed" from="MarginContainer/VBoxContainer/play button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/two player button" to="." method="_on_two_player_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/options button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/credits button" to="." method="_on_credits_button_pressed"]
